# omnitensor-node

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain
.github/workflows/: ci.yml  release.yml
config/: node_config.toml
docs/: usage.md
examples/: hello_world.rs
scripts/: node_setup.sh
src/: cli.rs  main.rs
src/ai/: inference_engine.rs  model_loader.rs
src/compute/: gpu_manager.rs  task_scheduler.rs
src/data/: validation.rs
tests/: integration_tests.rs
